fixed layout issues

--- a/public/style.css
+++ b/public/style.css
@@ -131,9 +131,13 @@ h3 {
     min-width: 150px;
     overflow-y: auto;
 */
-    padding: 2px;
+    padding: 6px;
     text-align: center;
+    margin-left: auto;
     background-color: lightblue;
+    margin-right: auto;
+    width: 582px;
+    border: 5px solid green;
 }
 }
 .banner .favorites-container ul {
@@ -239,7 +243,7 @@ h3 {
     text-align: center;
 }
 .content .search {
-    margin: 20px auto;
+    margin: 10px 8px 21px 5px;
     width: auto;
     display: block;
 }
@@ -418,7 +422,9 @@ border: 8px solid green;
 }
 .main-content{
     width: 973px;
-    margin: auto;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 4px;
     border-radius: 20px;
     box-shadow: 5px 5px 5px 5px deepskyblue;
@@ -528,11 +534,11 @@ border: 8px solid green;
     /*margin-right: 450px;*/
 }
 .banner .favorite ul { 
-    border: 8px solid green;
-    color: white;
-/*    margin-right: 50px;*/
-    background-color: white;
-     float: left; 
+    border: 3px solid black;
+    /* color: white; */
+    /* margin-right: 50px; */
+    background-color: silver;
+    float: left;
     width: 195px;
     margin-top: 10px;
     margin-bottom: 58px;
@@ -540,17 +546,22 @@ border: 8px solid green;
     height: 50px;
     margin-left: auto;
     margin-right: auto;
-    width: 196px;
-    padding: 0px 4px 4px 4px;
+    width: 100px;
+    padding: 4px 3px 7px 6px;
     color: salmon;
-    
+    font-weight: bold;
     
 }
 
 footer .inside-footer {
     height: 5px;
     background-color: orange;
-    margin-top: 500px;
+    margin-top: 50px;
+}
+footer .inside-footer-favorites {
+    height: 5px;
+    background-color: orange;
+    margin-top: 630px;
 }
 
 
